# EchoBrief

./: .gitignore  SETUP.md  docker-compose.yml  supabase_fix.sql  test_ollama.py
backend/: .env.example  README.md  alembic.ini  check_db.py  pyproject.toml  test_e2e.py  test_pipeline.py
backend/alembic/: env.py
backend/alembic/versions/: 001_initial_schema.py  20260528_1615-2c0123b6e2ab_add_production_ready_fields.py
backend/app/: __init__.py  config.py  database.py  main.py
backend/app/api/: __init__.py  deps.py
backend/app/api/v1/: __init__.py  media.py  router.py  summaries.py  transcripts.py
backend/app/core/: __init__.py  exceptions.py  logging.py  rate_limit.py  security.py
backend/app/models/: __init__.py  base.py  media_file.py  summary.py  transcript.py  user.py
backend/app/schemas/: __init__.py  common.py  media.py  summary.py  transcript.py
backend/app/services/: __init__.py  base_service.py  media_service.py  storage_service.py  summary_service.py  transcript_service.py
backend/app/workers/: __init__.py  broker.py  tasks.py
frontend/: .env.example  index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.jsx  index.css  main.jsx  supabaseClient.js
frontend/src/api/: axiosInstance.js  mediaApi.js
frontend/src/components/EmptyState/: EmptyState.jsx
frontend/src/components/Layout/: Layout.jsx  Navbar.jsx
frontend/src/components/MediaCard/: MediaCard.jsx
frontend/src/components/StatusBadge/: StatusBadge.jsx
frontend/src/components/UploadZone/: UploadZone.jsx
frontend/src/pages/: AuthPage.jsx  DashboardPage.jsx  ResultPage.jsx
frontend/src/store/: authContext.jsx
