[project]
name = "echobrief-backend"
version = "0.1.0"
description = "EchoBrief - AI-Powered Asynchronous Media Transcription & Summarization Platform"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    # Web Framework
    "fastapi[standard]>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "python-multipart>=0.0.9",
    # Database
    "sqlalchemy[asyncio]>=2.0.36",
    "asyncpg>=0.29.0",
    "alembic>=1.13.3",
    # Validation & Settings
    "pydantic>=2.8.0",
    "pydantic-settings>=2.4.0",
    "python-dotenv>=1.0.1",
    # Auth & Security
    "python-jose[cryptography]>=3.3.0",
    "httpx>=0.27.0",
    # Task Queue
    "dramatiq[redis,watch]>=1.16.0",
    "redis>=5.0.8",
    # AI / ML
    "openai>=1.40.0",
    "google-generativeai>=0.7.2",
    "pydub>=0.25.1",
    "aiofiles>=24.1.0",
    # Supabase
    "supabase>=2.7.2",
    # Rate Limiting & Middleware
    "slowapi>=0.1.9",
    # Logging
    "structlog>=24.4.0",
    # Resilience
    "tenacity>=8.5.0",
    # HTTP Client (async)
    "aiohttp>=3.10.0",
    "google-genai>=2.6.0",
    "faster-whisper>=1.2.1",
    "ollama>=0.6.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.23.8",
    "pytest-mock>=3.14.0",
    "httpx>=0.27.0",
    "faker>=26.0.0",
    "ruff>=0.5.0",
    "mypy>=1.11.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[dependency-groups]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.23.8",
    "pytest-mock>=3.14.0",
    "httpx>=0.27.0",
    "faker>=26.0.0",
    "ruff>=0.5.0",
    "mypy>=1.11.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "W", "F", "I", "B", "C4", "UP"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true
